# cached_dynamic_cast

./: LICENSE  README.md
build_scripts/: cmake_linux_gcc.sh  cmake_windows_vs2019.bat  cmake_windows_vs2022.bat
cached_dynamic_cast/: cached_dynamic_cast.cpp  cached_dynamic_cast.hpp
tests/: CMakeLists.txt  cached_dynamic_cast_tests_main.cpp
